Fix integration test imports and setuptools security vulnerability
- Update test_framework_integration.py to handle e2e/ directory location
- Upgrade setuptools from ~=75.6.0 to >=78.1.1 to fix security vulnerability
- All 557 tests now passing

--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ cryptography~=45.0.2
 anyio~=4.9.0
 h11~=0.16.0
 pbr~=6.1.1
-setuptools~=75.6.0
+setuptools>=78.1.1
 defusedxml~=0.7.1
 ipython~=8.12.3
 numpy~=2.2.6
